kubernetes/categories-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: categories
  template:
    metadata:
      labels:
        app: categories
    spec:
      containers:
      - name: categories-ms
        image: neniel/tennis-categories:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: categories-service
spec:
  type: LoadBalancer
  selector:
    app: categories
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
