kubernetes/players-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: players-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: players
  template:
    metadata:
      labels:
        app: players
    spec:
      containers:
      - name: players-ms
        image: neniel/tennis-players:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: players-service
spec:
  type: LoadBalancer
  selector:
    app: players
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
