kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "categories.tennis.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: categories-service
            port:
              number: 8080
  - host: "players.tennis.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: players-service
            port:
              number: 8081
